hphp/hack/test/typecheck/inout/bad_inout_hint_typeconst2.php.exp
File "bad_inout_hint_typeconst2.php", line 8, characters 14-14:
Unable to satisfy constraint on this type constant (Typing[4184])
File "bad_inout_hint_typeconst2.php", line 8, characters 34-36:
This is an inout parameter
File "bad_inout_hint_typeconst2.php", line 4, characters 38-40:
It is incompatible with a normal parameter
