hphp/hack/test/typecheck/inout/bad_inout_hint_typeconst2.php
<?hh

abstract class C1 {
  abstract const type T as (function(int): void);
}

class C2 extends C1 {
  const type T = (function(inout int): void);
}
